Preliminary draft of 6 and 7 done

--- a/website/lectures/lecture02.qmd
+++ b/website/lectures/lecture02.qmd
@@ -100,7 +100,7 @@ For instance, I initially ran just the first line and manually inspected the tab
 It is very helpful to develop pipelines incrementally and to check intermediate results before putting everything together in one block of code.
 :::
 
-## An initial expected goals model
+## An initial expected goals model {#sec-init-xg}
 
 Suppose we observe a dataset consisting of $n$ shots.
 For each shot $i = 1, \ldots, n,$ let $Y_{i}$ be a binary indicator of whether the shot resulted in a goal ($Y_{i} = 1$) or not ($Y_{i} = 0$).
