--- a/website/lectures/lecture06.qmd
+++ b/website/lectures/lecture06.qmd
@@ -241,7 +241,6 @@ statcast2024 <-
       balls >= 0 & balls < 4 & 
       outs_when_up >= 0 & outs_when_up < 3) |>
   dplyr::arrange(game_pk, at_bat_number, pitch_number)
-save(statcast2024, file = "statcast2024.RData")
 ```
 We're now left with 695,135 regular season pitches.
 
@@ -259,8 +258,29 @@ As a bit of a preview, here is a plot of all the `hc_x` and `hc_y` values.
 
 par(mar = c(3,3,2,1), mgp = c(1.8, 0.5, 0))
 plot(statcast2024$hc_x, statcast2024$hc_y, 
-     xlab = "hc_x", ylab = "hc_y"
+     xlab = "hc_x", ylab = "hc_y",
      pch = 16, cex = 0.2, col = rgb(0,0,0, 0.1))
+```
+
+### Adding baserunner information
+
+The columns `on_1b`, `on_2b`, and `on_3b` record who is on first, second, or third base at the beginning of each pitch (`NA` values indicate that nobody is on base).
+For convenience, we will add a new column to the data table that records the baserunner configuration using a string of 3 binary digits.
+If there is a runner on first base, the first digit will be a 1 and if there is not a runner on first base, the first digit will be a 0.
+Similarly, the second and third digits respectively indicate whether there are runners on second and third base.
+So, the string `"101"` indicates that there are runners on first and third base but not on second.
+To create the 3-digit binary string encoding baserunner configuration, notice that `1*(!is.na(on_1b))` will return a 1 if there is someone on first base and 0 otherwise.
+So by pasting together the results of `1*(!is.na(on_1b))`, `1*(!is.na(on_2b))`, and `1*(!is.na(on_3b))`, we can form the 3-digit binary string described above. 
+In following code, we also rename the column `outs_when_up` to `Outs`.
+```{r add-baserunner}
+statcast2024 <-
+  statcast2024 |>
+  dplyr::mutate(
+    BaseRunner = 
+      paste0(1*(!is.na(on_1b)),
+             1*(!is.na(on_2b)),
+             1*(!is.na(on_3b)))) |>
+  dplyr::rename(Outs = outs_when_up)
 ```
 
 ### Getting player names
@@ -276,6 +296,7 @@ Like with the raw pitch-by-pitch data, I recommend that you download this player
 #| message: false
 #| output: false
 #| warning: false
+#| eval: false
 player2024_id <- # <1>
   unique(
     c(statcast2024$batter, statcast2024$pitcher,
@@ -348,6 +369,7 @@ We will also use `purrr:map` instead of writing an explict for loop.
 
 ```{r}
 #| label: get-lineups
+#| eval: false
 poss_get_lineup <- purrr::possibly(.f = get_lineup, otherwise = NULL) 
 unik_game_pk <- unique(statcast2024$game_pk)
 
@@ -376,53 +398,34 @@ The table `lineups2024` contains the starters and their position for all the gam
 The following code determines the most commonly listed position for each player.
 ```{r}
 #| label: get-common-position
+#| output: false
+#| warning: false
+#| message: false
 positions2024 <-
   lineups2024 |>
-  dplyr::group_by(batter, position) |>
+  dplyr::group_by(key_mlbam, position) |>
   dplyr::summarise(n = dplyr::n()) |> # <1>
   dplyr::slice_max(order_by = n, with_ties = FALSE) |> #<2>
   dplyr::ungroup() |>
-  dplyr::select(batter, positions2024)
+  dplyr::select(key_mlbam, position)
 save(positions2024, file = "positions2024.RData")
 ```
 1. Counts the number of occurrences of each player-position combination
 2. After we call `dplyr::summarise()`, the resulting data table is still grouped by `batter`. So, when we call `dplyr::slice_max()` it looks at all the rows corresponding to each player and extracts the one with highest count. This is how we determine the most commonly listed position.
-5. 
 
 
 ## Expected Runs
 
-We will encode baserunner configuration using a binary string of length 3. 
-If there is a runner on first base, the first digit will be a 1 and if there is not a runner on first base, the first digit will be a 0.
-Similarly, the second and third digits respectively indicate whether there are runners on second and third base.
-So if $\textrm{br} = "011"$ that means that there are runners on second and third base at the beginning of the at-bat but not on first base. 
-The raw StatCast data contains variables `on_1b`, `on_2b`, and `on_3b`.
-From a quick visual inspection of the dataset (e.g., with `statcast2024$on_1b[1:100]`), we find many `NA` values.
-These correspond to pitches when there is nobody on that particular base.
-When the value is not `NA`, it is the numeric id of the batting team player who is on that base.
-To create the 3-digit binary string encoding baserunner configuration, notice that `1*(!is.na(on_1b))` will return a 1 if there is somone on first base and 0 otherwise.
-So by pasting together the results of `1*(!is.na(on_1b))`, `1*(!is.na(on_2b))`, and `1*(!is.na(on_3b))`, we can form the 3-digit binary string described above. 
-In the codeblock below, we also rename the column `outs_when_up` to `Outs`.
-```{r add-baserunner}
-statcast2024 <-
-  statcast2024 |>
-  dplyr::mutate(
-    BaseRunner = 
-      paste0(1*(!is.na(on_1b)),
-             1*(!is.na(on_2b)),
-             1*(!is.na(on_3b)))) |>
-  dplyr::rename(Outs = outs_when_up)
-```
+:::{.callout-note icon=false}
 
-There are 3 possible values for the number of outs ($\textrm{o} \in \{0,1,2\}$) and 8 possible values for the baserunner configuration ($\textrm{br} \in \{"000", "100", "010", "001", "110", "101", "011", "111"\}$).
-So, there are 24 different values of run expectancy, which is often presented in a table with rows corresponding to baserunner configuration and columns corresponding to outs.
+## Definition
 
-
-### Computing $\rho(\textrm{o}, \textrm{br})$
+For each combination of the number of outs ($\textrm{o} \in \{0,1,2\}$) and base runner configurations ($\textrm{br} \in \{"000", "100", "010", "001", "110", "101", "011", "111"\}$), let $\rho(\textrm{o}, \textrm{br})$ be the average number of runs that a team scores in the remainder of the half-inning following a pitch thrown with $\textrm{o}$ outs and base runner configuration $\textrm{br}.$ 
+:::
 
 Computing $\rho(\textrm{o}, \textrm{br})$ is conceptually straightforward: we need to divide our observed at-bats into 24 bins, one for each combination of $(\textrm{o}, \textrm{br})$ and then compute the average value of $R$ within each bin.
-This is *exactly* the same "binning-and-averaging" procedure we used to fit our initial XG models in [Lecture 2](lecture2.html).
-We will do this using at-bats taken in the first 8 innings of played in the 2021, 2022, and 2023 regular seasons.
+This is *exactly* the same "binning-and-averaging" procedure we used to fit our [initial XG models in Lecture 2](lecture02.qmd#sec-init-xg).
+We will do this using pitches taken in the first 8 innings of played in the 2024 regular season.
 We focus only on the first 8 innings because the 9th and extra innings are fundamentally different than the others.
 Specifically, the bottom half of the 9th (or later) innings is only played if the game is tied or the home team is trailing after the top of the 9th inning concludes.
 In those half-innings, if played, the game stops as soon as a winning run is scored.
@@ -468,14 +471,14 @@ Accordingly, the last value in the `post_bat_score` column is the batting team's
 Thus, to compute $R_{i,a}$ for all pitches in this inning, it is enough to subtract the `bat_score` in each row from the last `post_bat_score` in the table.
 To access this last value, we use the function `last()`.
 ```{r dodgers-ria}
-last(dodgers_inning$post_bat_score) - dodgers_inning$bat_score
+dplyr::last(dodgers_inning$post_bat_score) - dodgers_inning$bat_score
 ```
 
 We now append a column with these values to our data table `dodgers_inning`
 ```{r dodgers-append-ria}
 dodgers_inning <-
   dodgers_inning |>
-  dplyr::mutate(RunsRemaining = last(post_bat_score) - bat_score)
+  dplyr::mutate(RunsRemaining = dplyr::last(post_bat_score) - bat_score)
 ```
 
 #### Putting it all together
@@ -487,7 +490,7 @@ statcast2024 <-
   statcast2024 |>
   dplyr::group_by(game_pk, inning, inning_topbot) |> # <1>
   dplyr::arrange(at_bat_number, pitch_number) |> # <2>
-  dplyr::mutate(RunsRemaining = last(post_bat_score) - bat_score) |> #<3>
+  dplyr::mutate(RunsRemaining = dplyr::last(post_bat_score) - bat_score) |> #<3>
   dplyr::ungroup()
 ```
 1. Divide the data based on the combination of game and half-inning
@@ -516,38 +519,32 @@ Traditionally, expected runs is reported using an $8\times 3$ matrix, with rows 
 We can re-format `expected_runs` to this matrix format using the [`pivot_wider()`](https://tidyr.tidyverse.org/reference/pivot_wider.html) function
 ```{r pivot-rho}
 expected_runs |> 
-  dplyr::pivot_wider(
+  tidyr::pivot_wider(
     names_from = Outs,
     values_from = rho,
     names_prefix="Outs: ")
 ```
 
+In the March 20, 2024 game against the Padres, Ohtani recorded his first hit in the 3rd inning on a pitch with 2 outs and no runners on base.
+Based on the game state at the start of the at-bat (i.e., `Outs=2` and `BaseRunner='000'`), his team can expect to score 0.1 runs in the remainder of the half-inning.
+As a result of Ohtani's single, he changed the game state to `Outs = 2` and `BaseRunner=100`, a state from which his team can expect to score 0.22 runs, on average.
+So, although his at-bat did not directly result in a run scoring, Ohtani *increased* his team's run expectancy by about 0.12 runs.
+
 
 ## Run value
 
-Recall Ohtani's at-bat from the 3rd inning in that March 20, 2024 game against the Padres.
-He came up to the plate with 2 outs and no runners on base.
-Based on the game state at the start of the at-bat (i.e., `Outs=2` and `BaseRunners='000'`), his team can expect to score 0.1 runs in the remainder of the half-inning.
-As a result of Ohtani's single, he has changed the game state to `Outs = 2` and `BaseRunners=100`.
-So, although his at-bat did not directly result in a run scoring, Ohtani *increased* the number of runs his team can expect to score in the remainder of the half-inning.
+While expected runs is a really useful metric, for the purposes of allocating credit, we need to account not only for what we expect to happen but also what actually happened as a result of each at-bat.
 
-<!--
-Now suppose the batter hits a double, advancing to second base and changing the game state to `Outs=1` and `BaseRunners='100'`
-According to our expected runs matrix, from this updated state, the batting team expects to score  runs in the remaining of the half-inning.
-If, however, the batter had struck out in this plate appearance, then he would have ended the half-inning, from which point his team can expect to score no runs in the remainder of the half-inning.
-So, on average, the batter earns his team about 0.24 runs, on average, by hitting a double and advancing to second, and loses his team about 0.1 runs, on average, by striking out from the game state `Outs=2` and `BaseRunners='000'`.
--->
 ::: {.callout-note icon=false}
 
-## Run value
+## Definition: Run Value
 The **run value** of an at-bat is defined as the the number of runs scored in the at-bat plus the difference in expected runs from the starting to ending state.
 That is, denoting the number of runs scored in the at-bat as $\textrm{RunsScored}$ and the starting and ending states as $(\textrm{o}_{\text{start}}, \textrm{br}_{\text{start}})$ and $(\textrm{o}_{\text{end}}, \textrm{br}_{\text{end}}),$ then
 $$
 \textrm{RunValue} = \textrm{RunsScored} + \rho(\textrm{o}_{\text{end}}, \textrm{br}_{\text{end}}) - \rho(\textrm{o}_{\text{start}}, \textrm{br}_{\text{start}}) 
 $$
 :::
-In a sense, run value rewards batter credits for two things, actually scoring runs and putting their team in positions to score more runs.
-At the same time, it penalizes batters who do not hit home runs or drive in runs and/or move their team to a less-favorable run expectancy.
+In a sense, run value rewards batters and base runners for two things, actually scoring runs and putting their team in positions from which they could potentially score more runs.
 
 
 To do compute the run value of each at-bat in the 2024 season, we must compute
@@ -558,7 +555,6 @@ To do compute the run value of each at-bat in the 2024 season, we must compute
 
 We will first develop the necessary code using the data from Dodger's 8th inning from their game against the Padres.
 Then, we will deploy that code to the whole `statcast2024` table by grouping by `game_pk` and `at_bat_number`. 
-
 
 ### Calculating RunsScored
 
@@ -580,7 +576,7 @@ dodgers_inning |>
 ```
 
 Based on the `description` column, we see that the first pitch of at-bat 62 was a foul ball and the second pitch was hit into play.
-When we look at the corresponding row (row 6) of the table, we see that that Dodgers' pre-pitch score was 1 (`bar_score = 1`) and that they scored 1 run as a result of the hit (`post_bat_score = 2`).
+When we look at the corresponding row (row 6) of the table, we see that that Dodgers' pre-pitch score was 1 (`bat_score = 1`) and that they scored 1 run as a result of the hit (`post_bat_score = 2`).
 Reassuringly, the difference between the value of `post_bat_score` in row 6 (the last row for at-bat 62) and the value of `bat_score` in row 5 (the first row for at-bat 62) is 1.
 We can similarly verify our procedure works in at-bat 61: the fourth value of `post_bat_score` and the first value of `bat_score` are equal and the Dodgers did not score in this at-bat.
 
@@ -593,6 +589,7 @@ dodgers_inning <-
   dplyr::mutate(RunsScored = dplyr::last(post_bat_score) - dplyr::first(bat_score)) |>
   dplyr::ungroup() |>
   dplyr::arrange(at_bat_number, pitch_number)
+dodgers_inning |> dplyr::select(at_bat_number, pitch_number, bat_score, description, post_bat_score)
 ```
 
 We can now apply this formula to all pitches in `statcast2024` by grouping by `game_pk` and `at_bat_number`.
@@ -652,12 +649,12 @@ dodgers_inning |>
   dplyr::select(at_bat_number, pitch_number, Outs, BaseRunner, endOuts, endBaseRunner) |>
   dplyr::ungroup()
 ```
+<!--
+In [Lecture 7](lecture07.qmd) and [Lecture 8](lecture08.qmd), we will work not only with the game-state (i.e., the values of `Outs` and `BaseRunner`) at the end of every at-bat but also with the actual identities of the base-runners and the location where a ball-in-play was fielded (if the batter hit the ball) at the end of every at-bat.
 
-In [Lecture 7](lecture7.qmd) and [Lecture 8](lecture8.qmd), we will work not only with the game-state (i.e., the values of `Outs` and `BaseRunner`) at the end of every at-bat but also with the actual identities of the base-runners and the location where a ball-in-play was fielded (if the batter hit the ball) at the end of every at-bat.
 We can following an essentially identical strategy of (i) sorting pitches by at-bat and pitch numbers; (ii) computing the leading value of several columns within each half-inning; (iii) grouping by at-bat number; and (iv) taking the lasts of those leading values.
-
-The code below performs this calculation and also pulls out the rows corresponding to just the first pitch of every at-bat. 
-
+-->
+We can repeat this code for all at-bats.
 ```{r runvalue_start}
 runValue2024 <-
   statcast2024 |>
@@ -765,8 +762,7 @@ Over the course of the entire game, Ohtani created a total of `{r} sum(ohtani_ab
 The negative run value created in his first, third, and fourth at-bats (i.e., when he got out) is offset by the positive run value he created by singling in the top of the 3rd inning and driving in a run in the top of the 8th inning.
 Note the run value of his last at-at is exactly 1 because a single run scored but the base-runner configuration did not change as a result of the at-bat.
 
-By repeating this calculation over the course of the entire 2024 regular season, we can identify those batters who created the most run value for their teams. 
-
+By repeating this calculation over the course of the entire 2024 regular season, we can identify those batters who created the most run value for their teams.
 ```{r re24}
 #| message: false
 
@@ -781,13 +777,13 @@ re24 <-
   dplyr::select(game_pk, at_bat_number, batter) |>
   dplyr::inner_join(y = runValue2024, by = c("game_pk", "at_bat_number")) |>
   dplyr::group_by(batter) |>
-  dplyr::summarise(RE24 = sum(RunValue),N = n()) |>
+  dplyr::summarise(RE24 = sum(RunValue),N = dplyr::n()) |>
   dplyr::inner_join(y = tmp_lookup, by = "batter") |>
   dplyr::select(Name, RE24, N) |>
-  arrange(desc(RE24))
+  dplyr::arrange(desc(RE24))
 re24
 ```
-When we compare our top-10 to FanGraph's leaderboard for RE24, we see a lot of overlap.
+When we compare our top-10 to [FanGraph's leaderboard for RE24](https://www.fangraphs.com/leaders/major-league?pos=all&type=3&sortcol=5&sortdir=default&qual=30&team=0&startdate=&enddate=&month=0&season1=2024&season=2024), we see a lot of overlap.
 But there are some differences, especially with regards to the number of plate appearances and actual RE24 values.
 For the latter, FanGraph likely used a different expected run matrix.
 And the StatCast data is not complete; for instance, it is missing 3 games in which Judge played.
